[package]
name = "uptime_kuma_pusher"
authors = ["FlareFlo"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "simple pusher client for https://uptime.kuma.pet/"
repository = "https://github.com/FlareFlo/uptime_kuma_pusher"
readme = "README.md"

[dependencies]
ureq = "2.10.1"
url = "2.5"
